<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="7dp"
        android:text="@string/help_title"
        android:textColor="#c6e460"
        android:textSize="15pt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:paddingBottom="7dp"
        android:text="@string/P1_p1"
        android:textColor="#FFFFFF"
        android:textSize="9pt" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:contentDescription="litle alien"
        android:paddingBottom="7dp"
        android:paddingLeft="170dp"
        android:src="@drawable/smallalien" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image1"
        android:paddingBottom="7dp"
        android:text="@string/P1_p2"
        android:textColor="#FFFFFF"
        android:textSize="9pt" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="150dp"
        android:contentDescription="controls"
        android:src="@drawable/control_lr" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/image2"
        android:paddingLeft="10dp"
        android:text="@string/P1_info1"
        android:textColor="#c6e460"
        android:textSize="7pt" />

</RelativeLayout>