<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="14dp"
        android:text="@string/settings1"
        android:textColor="#FFFFFF"
        android:textSize="15pt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="42dp"
        android:text="@string/settingsAudio"
        android:textColor="#FFFFFF"
        android:textSize="9pt" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="29dp"
        android:layout_toRightOf="@+id/textView2"
        android:onClick="onToggleClicked"
        android:text="@string/settingsAudio"
        android:textOff="Muted"
        android:textOn="Playing" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/toggleButton1"
        android:layout_marginRight="38dp"
        android:layout_marginTop="40dp"
        android:text="@string/checkUpdate" />

</RelativeLayout>